# TerminalScope

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
src/tscope/: __init__.py  main.py
tests/: test.py
