[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tscope"
dynamic = ["version"]
description = "A simple Python oscilloscope for displaying 1-dim dynamic data in the command line"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Henrik", email = "im.zhangxc@gmail.com"}
]
maintainers = [
    {name = "Henrik", email = "im.zhangxc@gmail.com"}
]
keywords = ["oscilloscope", "terminal", "visualization", "real-time", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/sszxc/TerminalScope"
Issues = "https://github.com/sszxc/TerminalScope/issues"

[tool.setuptools_scm]
write_to = "src/tscope/_version.py"
write_to_template = "__version__ = '{version}'"
